syntax = "proto3";

package hal;

message SimulatorResetResponse {}
